# python-playground

./: .gitignore  Pipfile  README.md  main.py
agents/: README.md  core_concepts.py  linkedin_lookup_agent.py  main.py  pyproject.toml  working_with_llms.py
algorithms/: TransposeMatrix.py
algorithms/arrays/: NonConstructibleChange.py  TournamentWinner.py
algorithms/graphs/: DepthFirstSearch.py
algorithms/greedy/: ClassPhotos.py  MinimumWaitingTime.py  TandemBicycle.py
algorithms/trees/: BranchSums.py  EvaluateExpressionTree.py  FindClosestValueInBST.py  NodeDepths.py
genai/: ice_breaker.py
genai/agents/: linkedin_lookup_agent.py
genai/third_parties/: linkedin.py
genai/tools/: tools.py
github_api/: OutputExport.py  docs-genai.ipynb  docs-genai.streamlit.py  main.py  tree.json
test/algorithms/graphs/: test_DepthFirstSearch.py
test/algorithms/greedy/: test_ClassPhotos.py  test_MinimumWaitingTime.py  test_TandemBicycle.py
test/algorithms/trees/: test_BranchSums.py  test_EvaluateExpressionTree.py  test_FindClosestValueInBST.py  test_NodeDepths.py
