[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.28",
    "langchain-anthropic>=0.3.22",
    "langchain-core>=0.3.84",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.11",
    "python-dotenv>=1.2.1",
]
